--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.akshay.wakeup">
+    package="com.android.akshay.wakeup">
 
     <uses-sdk
         android:maxSdkVersion="22"
         android:minSdkVersion="16"
         android:targetSdkVersion="22" />
-
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-
+    
     <uses-feature
         android:name="android.hardware.sensor.proximity"
         android:required="true" />
@@ -20,7 +18,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name="com.android.akshay.wakeup.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,17 +27,19 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".PersistentService" />
+        <service android:name="com.android.akshay.wakeup.PersistentService" />
 
         <activity
-            android:name=".TransientActivity"
+            android:name="com.android.akshay.wakeup.TransientActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:excludeFromRecents="true"
             android:label="@string/title_activity_fullscreen"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:theme="@style/FullscreenTheme">
+
+        </activity>
 
         <activity
-            android:name=".AdminActivity$Controller"
+            android:name="com.android.akshay.wakeup.AdminActivity$Controller"
             android:label="@string/activity_device_admin">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,7 +48,7 @@
         </activity>
 
         <receiver
-            android:name=".AdminActivity"
+            android:name="com.android.akshay.wakeup.AdminActivity"
             android:description="@string/device_admin_description"
             android:label="@string/device_admin"
             android:permission="android.permission.BIND_DEVICE_ADMIN">
@@ -61,7 +61,7 @@
         </receiver>
 
         <activity
-            android:name=".CalibrationActivity"
+            android:name="com.android.akshay.wakeup.CalibrationActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
